--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Lista de tarefas</title>
 </head>
 <body>
+    <header>
+        <h1>Lista de tarefas</h1>
+    </header>
+
+
     <h1>Lista de tarefas</h1>
     <ul>
         <li>Tarefa 1</li>
