--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="sobre.html">sobre</a>
+            <a href="servicos">Serviços</a>
         </nav>
     </header>
 
